force-app/main/default/objects/VS_Project__c/VS_Project__c.object-meta.xml
<CustomObject>
    <description>프로젝트 정보 관리 Object</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>