force-app/main/default/objects/VS_Project__c/fields/cntOpportunity__c.field-meta.xml
<CustomField>
    <fullName>cntOpportunity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>cntOpportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>