force-app/main/default/objects/VS_Project__c/fields/CorporationCode__c.field-meta.xml
<CustomField>
    <fullName>CorporationCode__c</fullName>
    <defaultValue>$User.Country</defaultValue>
    <label>Corporation Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>