force-app/main/default/objects/VS_Project__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>프로필 권한부여 점검</label>
    <length>255</length>
    <type>Text</type>
</CustomField>