force-app/main/default/objects/VS_Project__c/fields/fm_isEditable__c.field-meta.xml
<CustomField>
    <fullName>fm_isEditable__c</fullName>
    <formula>IF( ISBLANK(Member__c ), true, If(CONTAINS(Member__c ,  $User.EmployeeNumber)  , true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isEditable</label>
    <type>Checkbox</type>
</CustomField>