force-app/main/default/objects/VS_Project__c/fields/fm_isOwner__c.field-meta.xml
<CustomField>
    <fullName>fm_isOwner__c</fullName>
    <formula>IF(  $User.Id   =   Owner:User.Id  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isOwner</label>
    <type>Checkbox</type>
</CustomField>