force-app/main/default/objects/VS_Project__c/fields/fm_ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>fm_ParentAccount__c</fullName>
    <formula>l_Account__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>