force-app/main/default/objects/VS_Project__c/fields/fm_ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>fm_ProjectCode__c</fullName>
    <formula>CorporationCode__c +&quot;-&quot; + Seq__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Code</label>
    <type>Text</type>
</CustomField>