force-app/main/default/objects/VS_Project__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <description>프로젝트 멤버로 등록된 사람 사번 정보</description>
    <label>Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>