force-app/main/default/objects/VS_Project__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>