force-app/main/default/objects/VS_Project__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <displayFormat>P-{000000}</displayFormat>
    <label>Seq</label>
    <type>AutoNumber</type>
</CustomField>