force-app/main/default/objects/VS_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>fm_ProjectCode__c</columns>
    <columns>StartDate__c</columns>
    <columns>l_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>